--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,10 @@
     Welcome to {{ title }}!
   </h1>
   <form (submit)="onSubmit()">
-    <input type="text" name="email" [(ngModel)]="user.email">
+    <input type="text" name="username" [(ngModel)]="user.username" #username="ngModel" required />
+    <input type="password" name="password" [(ngModel)]="user.password" #password="ngModel" required />   
+    <p>{{ username.errors | json }} {{ username.valid | json }}</p>
+    <p>{{ password.errors | json }} {{ password.valid | json }}</p>
     <input type="submit">
   </form>
 </div>
